sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: value getNombreValeur
		for (i <- 0 to getNombreValeur() - 2 by -1) {
                               ^